# reprojection

./: .clang-format  .dockerignore  .gitignore  Doxyfile  README.md  calibration_database.txt  custom_install_command.py  orbit.py  plot.py  plot_database.py  plot_sphere.py  plotly_3d_plotting.py  proto-gen.txt  pytho_packagin_user_guide.md  python-bopd.md  scipy_spline_demo.py  vid1.db3  viz.py
code/: CMakeLists.txt  app.py
code/application_ros1/: CMakeLists.txt
code/application_ros1/examples/: reprojection_app.cpp
code/application_ros1/src/: image_loading.cpp  image_loading.hpp  image_loading.test.cpp  msg_parsing.cpp  msg_parsing.hpp  msg_parsing.test.cpp  reprojection.cpp  reprojection_app.cpp  testing_utils.hpp
code/application_ros1/test/: reprojection.test.cpp
code/application_ros2/: CMakeLists.txt
code/application_ros2/examples/: reprojection_app.cpp
code/application_ros2/src/: image_loading.cpp  image_loading.hpp  image_loading.test.cpp  msg_parsing.cpp  msg_parsing.test.cpp  reprojection.cpp  testing_utils.hpp
code/application_ros2/test/: image_loading.test.cpp  reprojection.test.cpp
code/calibration/: CMakeLists.txt
code/calibration/src/: focal_length_initialization.cpp  focal_length_initialization.hpp  focal_length_initialization.test.cpp  focal_length_initialization_demo.cpp  initialize_focal_length.cpp  parabola_line_initialization.cpp  parabola_line_initialization.hpp  parabola_line_initialization.test.cpp  vanishing_point_initialization.hpp  vanishing_point_initialization.test.cpp
code/calibration/test/: focal_length_initialization.test.cpp  focal_length_initialization_demo.cpp  focal_length_initialization_demo.test.cpp  initialize_focal_length.test.cpp
code/cmake_macros/: add_examples.cmake  add_library.cmake  add_tests.cmake
code/database/: CMakeLists.txt
code/database/proto/: extracted_target.proto
code/database/src/: calibration_database.cpp  database.cpp  sensor_data_interface.cpp  serialization.cpp  serialization.hpp  serialization.test.cpp  sql.hpp  sql.test.cpp  sqlite3_helpers.cpp  sqlite3_helpers.hpp  sqlite3_helpers.test.cpp
code/database/test/: calibration_database.test.cpp  database.test.cpp  sensor_data_interface.test.cpp  write_database.test.cpp
code/demos/: CMakeLists.txt
code/demos/examples/: feature_extraction.cpp
code/demos/src/: image_feed.cpp
code/demos/test/: extracted_dataset.test.cpp  image_feed.test.cpp  image_source.test.cpp
code/eigen_utilities/: CMakeLists.txt
code/eigen_utilities/src/: camera.cpp  grid.cpp
code/eigen_utilities/test/: grid.test.cpp
code/feature-extraction/: CMakeLists.txt
code/feature-extraction/src/: april_tag_cpp_wrapper.hpp  target_extraction.cpp  test_fixture_yaml_config.hpp  utilities.hpp
code/feature-extraction/test/: target_extraction.test.cpp
code/feature_extraction/: CMakeLists.txt
code/feature_extraction/examples/: webcam_demo.cpp
code/feature_extraction/src/: april_tag_cpp_wrapper.cpp  april_tag_cpp_wrapper.hpp  april_tag_cpp_wrapper.test.cpp  target_extraction.cpp  target_extractors.cpp  target_extractors.hpp  target_extractors.test.cpp  target_generators.cpp  target_generators.hpp  target_generators.test.cpp  test_fixture_april_tag.hpp  utilities.cpp  utilities.hpp  utilities.test.cpp
code/feature_extraction/test/: target_extraction.test.cpp
code/geometry/: CMakeLists.txt
code/geometry/src/: lie.cpp  lie.hpp  lie.test.cpp
code/geometry/test/: lie.test.cpp  lie_se3.test.cpp  lie_so3.test.cpp
code/include/optimization_architecture/: cost_functions.hpp  optimizer_handler.hpp
code/include/reprojection/: cost_functions.hpp  geometric_transforms.hpp  optimizer_handler.hpp  pinhole_projection.hpp  unified_camera_model_projection.hpp
code/optimization/: CMakeLists.txt
code/optimization/src/: ceres_geometry.hpp  ceres_geometry.test.cpp  ceres_xxx.hpp  ceres_xxx.test.cpp  nonlinear_refinement.cpp  (+13 more)
code/pnp/: CMakeLists.txt
code/projection_functions/: CMakeLists.txt
code/proto/: extracted_target.proto
code/python_tooling/: .isort.cfg  README.md  setup.py
code/spline/: CMakeLists.txt
code/sql/: README_SQL.md  assets_select.sql  assets_table.sql  calibration_steps_delete.sql  calibration_steps_insert.sql  calibration_steps_select.sql  calibration_steps_table.sql  calibration_steps_update.sql  calibration_steps_upsert.sql  camera_info_insert.sql  camera_info_select.sql  camera_info_select_all.sql  camera_info_table.sql  camera_intrinsics_insert.sql  camera_intrinsics_select.sql  camera_intrinsics_select_all.sql  camera_intrinsics_table.sql  camera_poses_insert.sql  camera_poses_select.sql  camera_poses_select_all.sql  camera_poses_table.sql  entities_table.sql  entity_insert.sql  entity_insert_or_ignore.sql  entity_table.sql  external_poses_insert.sql  external_poses_select.sql  external_poses_table.sql  extracted_target_insert.sql  extracted_targets_insert.sql  extracted_targets_select.sql  extracted_targets_select_all.sql  extracted_targets_table.sql  extrinsics_insert.sql  extrinsics_select.sql  extrinsics_select_all.sql  extrinsics_table.sql  gravity_insert.sql  gravity_select.sql  gravity_table.sql  (+47 more)
code/sql2/: artifacts_table.sql  assets_insert.sql  assets_select.sql  assets_table.sql  extracted_targets_table.sql  images_select.sql  images_table.sql  images_table2.sql  recordings_insert.sql  recordings_table.sql  runs_insert.sql  runs_select.sql  runs_table.sql  steps_insert.sql  steps_insert_id.sql  steps_select.sql  steps_table.sql  target_info_insert.sql  target_info_select.sql  target_info_table.sql
code/src/: cost_functions.test.cpp  geometric_transforms.test.cpp  optimizer_handler.cpp  pinhole_projection.test.cpp  unified_camera_model_projection.test.cpp
code/test/: test_cost_functions.cpp  test_geometric_transforms.cpp  test_optimizer_handler.cpp  test_pinhole_projection.cpp
code/test_data/: calibration_config.toml  dataset-calib-imu4_512_16.calib.db3  dataset-calib-imu4_512_16.db3  minimum_config.toml  note.txt  webcam_fisheye_aprilgrid3.db3
code/testing_mocks/: CMakeLists.txt
code/types/: CMakeLists.txt
(+293 files in other folders)
